# C-System-CLI

./: .gitignore  CMakeLists.txt  README.md
SYS/include/: ColorUtils.h  CommandRegistry.h  Config.h  History.h  ICommand.h  Utils.h
SYS/include/commands/: AnalyzeCommand.h  CdCommand.h  HelpCommand.h  HistoryCommand.h  LsCommand.h  PsCommand.h  PwdCommand.h  VersionCommand.h
SYS/src/: CommandRegistry.cpp  main.cpp
SYS/src/commands/: AnalyzeCommand.cpp  CdCommand.cpp  HelpCommand.cpp  HistoryCommand.cpp  LsCommand.cpp  PsCommand.cpp  PwdCommand.cpp  VersionCommand.cpp
